Add Click Here tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div class="Wrapper" style="outline: 1px solid red" onclick="testFunction()">
-	&nbsp
+	<p>CLICK HERE</p>
 		<!--<button onclick="testFunction()">TEST</button>-->
 		<div id="test" style="outline: 1px solid red; display: none">>
 			<img src="https://static.wixstatic.com/media/a1b0ec_64e5b16d1b5a4cffbbfd45ffefd97484~mv2.jpg/v1/crop/x_0,y_4,w_1135,h_1068/fill/w_856,h_806,al_c,q_85,usm_0.66_1.00_0.01/a1b0ec_64e5b16d1b5a4cffbbfd45ffefd97484~mv2.jpg" alt="">
