--- a/index.html
+++ b/index.html
@@ -2,24 +2,87 @@
 <html>
 <head>
 	<title>Shrimp Test Page</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-	<div class="Wrapper" style="outline: 1px solid red" onclick="testFunction()">
+<div id="showCount"></div>
+<!-- <input type="button" id="btnClick" value="Click me" onclick="CountFun()">	 -->
+	<div class="Wrapper" style="outline: 1px solid red" onclick="testFunction(); CountFun()">
 	<p>CLICK HERE</p>
+
 		<!--<button onclick="testFunction()">TEST</button>-->
-		<div id="test" style="outline: 1px solid red; display: none">>
-			<img src="https://static.wixstatic.com/media/a1b0ec_64e5b16d1b5a4cffbbfd45ffefd97484~mv2.jpg/v1/crop/x_0,y_4,w_1135,h_1068/fill/w_856,h_806,al_c,q_85,usm_0.66_1.00_0.01/a1b0ec_64e5b16d1b5a4cffbbfd45ffefd97484~mv2.jpg" alt="">
+		<div id="test" style="outline: 1px solid red; display: none">
+		<!-- <div id="test" style="outline: 1px solid red"> -->
+			<!-- <img src="http://tinyurl.com/gw6rw33" alt=""> -->
 		</div>	
 	</div>
 	<script>
+	var HTMLskills = '<img src="%data%">';
 		function testFunction() {
 			var x = document.getElementById('test');
 			if (x.style.display === 'none') {
 				x.style.display = 'block'
-			} else {
-				x.style.display = 'none';
 			}
 		}
+
+		var bio = {
+			// "name" : "Austin Nazareth",
+			// "role" : "Front-End Web Dev",
+			// "contacts" : {
+			// 	"mobile" : "123-123-1234",
+			// 	"email" : "placeholder@email.com",
+			// 	"github" : "MistaTg",
+			// 	"location" : "Calgary, AB"
+			// },
+			// "welcomeMessage" : "Hello World",
+			"skills" : ["http://tinyurl.com/gw6rw33", "http://tinyurl.com/gs3zngf"],
+			//"biopic" : "images/fry.jpg"
+		};
+
+bio.display = function(bio_obj, skills_obj, count_obj) {
+
+	// for (var bios=0,x=1;bios<x;bios++) {
+	// 	var formattedMobile = HTMLmobile.replace("%data%", bio_obj.contacts.mobile);
+	// 	var formattedEmail = HTMLemail.replace("%data%", bio_obj.contacts.email);
+	// 	var formattedGit = HTMLgithub.replace("%data%", bio_obj.contacts.github);
+	// 	var formattedLoc = HTMLlocation.replace("%data%", bio_obj.contacts.location);
+	// 	var formattedName = HTMLheaderName.replace("%data%", bio_obj.name);
+	// 	var formattedRole = HTMLheaderRole.replace("%data%", bio_obj.role);
+	// 	var formattedWelcomeMsg = HTMLwelcomeMsg.replace("%data%", bio_obj.welcomeMessage);
+	// 	var formattedProPic = HTMLbioPic.replace("%data%", bio_obj.biopic);
+	// 	var bioForm = formattedName + formattedRole + formattedWelcomeMsg + formattedProPic;
+	// 	var contactForm = formattedMobile + formattedEmail + formattedLoc + formattedGit;
+
+	// 	$("#header").append(bioForm);
+	// 	$("#topContacts").append(contactForm);
+	// 	$("#footerContacts").append(contactForm);
+	// 	$("#header").append(HTMLskillsStart)
+	// }
+
+	// for (var skill=0,x=count_obj;skill<x;skill++) {
+	// 		var formskills = HTMLskills.replace("%data%", bio_obj.skills[skill]);
+	// 		console.log(skill);
+	// 		$("#test").append(formskills);
+	// 	}
+
+	if (count_obj >= 0) {
+		var formskills = HTMLskills.replace("%data%", bio_obj.skills[count_obj]);
+		console.log(count_obj);
+		$("#test").append(formskills);
+	}
+};
+
+// bio.display(bio, bio.skills, cnt);
+ var cnt=-1;
+    function CountFun(){
+     cnt=parseInt(cnt)+parseInt(1);
+     var divData=document.getElementById("showCount");
+     divData.innerHTML="Number of Clicks: ("+cnt +")";//this part has been edited     
+     console.log(cnt);
+     bio.display(bio, bio.skills, cnt);
+    }
+
+
 	</script>
 
 </body>
